--- a/42/Scop/erobert/Makefile
+++ b/42/Scop/erobert/Makefile
@@ -6,13 +6,14 @@
 #    By: erobert <erobert@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2013/12/17 17:24:53 by erobert           #+#    #+#              #
-#    Updated: 2015/05/08 18:43:11 by erobert          ###   ########.fr        #
+#    Updated: 2015/05/08 19:42:51 by erobert          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
 NAME = scop
 FILES = ft_load_obj.c ft_load_shader.c \
 		ft_addsub_vect.c ft_cross_product.c \
+		ft_multmatrix.c ft_translation_matrix.c\
 		ft_projection_matrix.c ft_lookat.c \
 		ft_key_hook.c ft_loop_hook.c main.c
 SRCS = $(addprefix srcs/, $(FILES))
