--- a/42/Taskmaster/hdezier-rbernand/config/programs.conf
+++ b/42/Taskmaster/hdezier-rbernand/config/programs.conf
@@ -1,7 +1,7 @@
 {
   "programs": {
-    "nginx": {
-      "cmd": "/usr/local/bin/nginx",
+    "thor": {
+      "cmd": "/usr/local/bin/thor",
       "numprocs": 1,
       "umask": 18,
       "workingdir": "/tmp",
@@ -15,26 +15,11 @@
       "starttime": 5,
       "stopsignal": "TERM",
       "stoptime": 10,
-      "stdout": "/tmp/nginx.stdout",
-      "stderr": "/tmp/nginx.stderr",
+      "stdout": "./util/log.txt",
+      "stderr": "./util/log.txt",
       "env": null,
       "STARTED_BY": "taskmaster",
       "ANSWER": 42
-    },
-    "vogsphere": {
-      "cmd": "/usr/local/bin/vogsphere-worker",
-      "numprocs": 8,
-      "umask": 63,
-      "workingdir": "/tmp",
-      "autostart": true,
-      "autorestart": "unexpected",
-      "exitcodes": 0,
-      "startretries": 3,
-      "starttime": 5,
-      "stopsignal": "USR1",
-      "stoptime": 10,
-      "stdout": "/tmp/vgsworker.stdout",
-      "stderr": "/tmp/vgsworker.stderr"
     }
   }
 }
